Commented all the methods, and added responses for backslash, minus and equals

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html>
 <head>
 	<title>Notepad</title>
+	
 	<link rel="stylesheet" type="text/css" href="css/ui.css"></link>
+	<link rel="stylesheet" type="text/css" href="css/cursor.css"></link>
 	
 	<script type="text/javascript" src="js/globals.js"></script>
 	<script type="text/javascript" src="js/texthandler.js"></script>
